# sgp30-driver

./: README.md  pyproject.toml  setup.cfg
src/sgp30/: __init__.py  humidity.py  sgp30.py
tests/: test_humidity.py  test_sgp30.py
